--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
   },
   "peerDependencies": {
     "prop-types": "^15.0.0",
-    "react": "^0.14.0 || ^15.0.0 || ^16.0.1",
-    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.1"
+    "react": ">=16",
+    "react-dom": ">=16"
   },
   "devDependencies": {
     "babel-cli": "~6.26.0",
